# notebase

./: AGENTS.md  Cargo.toml  LICENSE  README.md  notebase.service
src/: cli.rs  client.rs  db.rs  embedding.rs  main.rs  server.rs
